--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,11 +12,22 @@
  *
  *= require_tree .
  *= require_self
- */
+*/
  
- @import 'bootstrap-sprockets';
- @import 'bootstrap';
+@import 'bootstrap-sprockets';
+@import 'bootstrap';
  
- h1, h2, h3 {
+h1, h2, h3 {
      font-family: 'Open Sans', sans-serif;
  }
+
+body, .navbar {
+  //gradient provided by @_ighosh at uiGradients.com
+  background: #525252; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #525252 , #3d72b4); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #525252 , #3d72b4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.navbar {
+  border:none;
+}
