--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,4 @@
-<h1>Welcome from our Home Page.</h1>
+<div class="home-callout text-center">
+  <h1>Welcome to DevMatch</h1>
+  <h3>A membership site were entrepreneurs can meet developers.</h3>
+</div>
