--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,10 +17,12 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
  
+// Typography styles
 h1, h2, h3 {
      font-family: 'Open Sans', sans-serif;
  }
 
+// Background Gradient
 .navbar, .home-callout {
   //gradient provided by @_ighosh at uiGradients.com
   background: #00c6ff; /* fallback for old browsers */
@@ -28,26 +30,27 @@ h1, h2, h3 {
   background: linear-gradient(to left, #00c6ff , #0072ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
+// Nav Styles
 .navbar {
   border:none;
 }
 
-.navbar-default .navbar-brand {
+.navbar-default .navbar-brand,
+.navbar-default .navbar-nav > li > a {
   color:white;
-}
-.navbar-default .navbar-nav > li > a{
-  color:white;
+  &:hover {
+    color:white;
+    opacity: 0.75;
+  }
 }
 
-.navbar-default .navbar-brand:hover {
-  color:white;
-  opacity: 0.75;
-}
+.navbar-default .navbar-brand:hover,
 .navbar-default .navbar-nav > li > a:hover {
   color:white;
   opacity: 0.75;
 }
 
+// Homepage Styles
 .home-callout{
   margin-top: -20px;
   padding-top: 50px;
