--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -56,6 +56,17 @@ h1, h2, h3 {
   opacity: 0.75;
 }
 
+.navbar-default .navbar-toggle .icon-bar {
+  background-color:white;
+}
+
+.navbar-default .navbar-toggle {
+  border: 2px solid white;
+  &:hover, &:focus {
+    background-color:#00c6ff;
+  }
+}
+
 // Homepage Styles
 .home-callout{
   margin-top: -20px;
