--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="home-callout text-center">
+<div class="home-callout text-center container-fluid">
   <h1>Welcome to DevMatch</h1>
   <h3>A membership site were entrepreneurs can meet developers.</h3>
 </div>
