--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -74,10 +74,17 @@ h1, h2, h3 {
   padding-bottom: 100px;
   color: white;
 }
-
-.alert-notice {
-  display:none;
+.flash-container {
+  position: absolute;
+  width: 100%;
 }
+.alert-notice, .alert-alert {
+  text-align: center;
+  background: rgba(255, 255, 255, 0.3);
+  border-color: rgba(255, 255, 255, 0.5);
+  margin-top: -14px;
+}
+
 .home-signup-links {
   margin-top: 30px;
 }
