Added users index view and action details

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -31,3 +31,14 @@
   text-align: center;
   margin-right: 5px;
 }
+
+//// for user Index Page Styles
+.user-index-avatar {
+  width: 128px;
+  height: 128px;
+  border-radius: 50%;
+}
+
+.well.white-bg {
+  background-color: white;
+}
